Adding Comments and markdowns

--- a/04. Decision Trees Classifier/Implementing Decision Tress.ipynb
+++ b/04. Decision Trees Classifier/Implementing Decision Tress.ipynb
@@ -7,7 +7,9 @@
      "languageId": "plaintext"
     }
    },
-   "source": []
+   "source": [
+    "## Implementing Decision Treee Classifier from Scratch for categorical Variable\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -215,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pre-processing of data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -337,6 +346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Creation and Testing\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -374,6 +390,13 @@
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The accuracy score is pretty good\n"
    ]
   }
  ],
