--- a/04. Decision Trees Classifier/Implementing Decision Tress.ipynb
+++ b/04. Decision Trees Classifier/Implementing Decision Tress.ipynb
@@ -322,6 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting Training and Testing Data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
